<resources>
    <string name="app_name">mBank</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="register_with_mbank">Register With mBank</string>
    <string name="login_to_mbank">Login to mBank</string>
    <string name="mbank_password">mBank Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="add_money">Add Money</string>
    <string name="account_balance">Account Balance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="reciver_s_account_no">Receiver\'s Account No.</string>
    <string name="send_money">Send Money</string>
    <string name="title_activity_maps">Map</string>
</resources>
